--- a/css/styles.css
+++ b/css/styles.css
@@ -36,16 +36,49 @@ header.main .container .top {
 	color: #333;
 }
 
-header.main nav {
-	background: #eee;
+a.cart {
+	display: inline-block;
+	text-decoration: none;
+	color: #000;
+}
+
+a.cart * {
+	display: inline-block;
+	vertical-align: middle;
+}
+
+a.cart img {
+	width: 30px;
+}
+
+a.cart .text {
+	position: relative;
+	top: 2px;
+	margin-left: 3px;
+}
+
+header.main .nav-bar {
+	background: #000;
 	margin-bottom: 50px;
 }
 
-header.main nav a {
+header.main .nav-bar ul {
+	margin: 0;
+	padding: 0;
+	display: flex;
+}
+
+header.main .nav-bar li {
+	margin: 0;
+	list-style: none;
+	margin-right: 50px;
+}
+
+header.main .nav-bar a {
+	display: block;
 	text-decoration: none;
-	color: #000;
-	padding: 10px 20px;
-	display: inline-block;
+	color: #fff;
+	padding: 15px 0;
 }
 
 section.content .container {
@@ -81,9 +114,15 @@ section.content main {
 }
 
 footer.main {
-	background: #eee;
+	background: #232323;
+	color: #969696;
 	margin-top: 100px;
 	padding: 25px 0;
+}
+
+footer.main h4{
+	color: #fff;
+	margin: 10px 0;
 }
 
 footer.main .row {
