--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,6 @@ section.content main {
 .items li {
 	flex: 0 0 30%;
 	list-style: none;
-	text-align: center;
 	margin-bottom: 50px;
 }
 
@@ -117,12 +116,19 @@ section.content main {
 }
 
 .items li .details {
-	background: #eee;
-	padding: 10px;
+	padding: 10px 0;
 }
 
-.items li h4 {
+.items li h4,
+.items li h5 {
 	margin: 0;
+	line-height: 1.6em;
+}
+
+.items li h5 {
+	color: #666;
+	font-size: 0.8em;
+	font-weight: normal;
 }
 
 footer.main {
