--- a/css/styles.css
+++ b/css/styles.css
@@ -109,10 +109,38 @@ section.content main {
 	margin-bottom: 50px;
 }
 
+.items li .image {
+	position: relative;
+	overflow: hidden;
+}
+
 .items li img {
 	width: 100%;
 	height: auto;
 	display: block;
+}
+
+.items li button {
+	width: 100%;
+	height: 50px;
+	background: #000;
+	color: #fff;
+	text-align: center;
+	border: 0 none;
+	cursor: pointer;
+	transition: all 0.15s ease-in-out;
+	transform: translateY(100%);
+	outline: 0 none;
+	position: absolute;
+	bottom: 0;
+}
+
+.items li button:hover {
+	background: #333;
+}
+
+.items li:hover button {
+	transform: translateY(0%);
 }
 
 .items li .details {
