--- a/css/styles.css
+++ b/css/styles.css
@@ -103,40 +103,40 @@ header.main .nav-bar a {
 	}
 }
 
-.items {
+.content .items {
 	margin: 0;
 	padding: 0;
 }
 
-.items li {
+.content .items li {
 	list-style: none;
 	margin-bottom: 25px;
 	text-align: center;
 }
 
 @media (min-width: 1000px) {
-	.items {
+	.content .items {
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-between;
 	}
-	.items li {
+	.content .items li {
 		flex: 0 0 30%;
 	}
 }
 
-.items li .image {
+.content .items li .image {
 	position: relative;
 	overflow: hidden;
 }
 
-.items li img {
+.content .items li img {
 	width: 100%;
 	height: auto;
 	display: block;
 }
 
-.items li button {
+.content .items li button {
 	width: 100%;
 	height: 50px;
 	background: #000;
@@ -149,32 +149,32 @@ header.main .nav-bar a {
 }
 
 @media (min-width: 1000px) {
-	.items li button {
+	.content .items li button {
 		position: absolute;
 		bottom: -50px;
 		left: 0;
 	}
-	.items li:hover button {
+	.content .items li:hover button {
 		bottom: 0;
 	}
 }
 
-.items li button:hover {
+.content .items li button:hover {
 	background: #333;
 }
 
 
-.items li .details {
+.content .items li .details {
 	padding: 10px 0;
 }
 
-.items li h4,
+.content .items li h4,
 .items li h5 {
 	margin: 0;
 	line-height: 1.6em;
 }
 
-.items li h5 {
+.content .items li h5 {
 	color: #666;
 	font-size: 0.8em;
 	font-weight: normal;
@@ -202,4 +202,39 @@ footer.main h4{
 	footer.main .col {
 		flex: 0 0 30%;
 	}
+}
+
+body.cart-show section.cart {
+	right: 0;
+}
+
+section.cart {
+	position: fixed;
+	top: 0;
+	right: -100%;
+	z-index: 100;
+	width: 25%;
+	min-width: 320px;
+	min-height: 100vh;
+	background: #eee;
+	box-shadow: 0 0 5px rgba(0,0,0,0.25);
+	padding: 25px;
+	transition: all 0.5s;
+}
+
+section.cart .items {
+	margin: 0;
+	padding: 0;
+}
+
+section.cart .items li {
+	display: flex;
+}
+
+section.cart .items .image {
+	flex: 0 0 20%;
+}
+
+section.cart .items img {
+	width: 100%;
 }
