--- a/css/styles.css
+++ b/css/styles.css
@@ -237,28 +237,55 @@ section.cart {
 	top: 0;
 	right: -100%;
 	z-index: 100;
-	width: 25%;
-	min-width: 320px;
+	width: 100%;
+	max-width: 360px;
 	min-height: 100vh;
 	background: #eee;
 	box-shadow: 0 0 5px rgba(0,0,0,0.25);
 	padding: 25px;
 	transition: all 0.5s;
+	display: flex;
+	flex-direction: column;
+}
+
+section.cart .close {
+	cursor: pointer;
 }
 
 section.cart .items {
-	margin: 0;
+	margin: 50px 0;
 	padding: 0;
 }
 
 section.cart .items li {
 	display: flex;
+	margin-bottom: 20px;
 }
 
 section.cart .items .image {
-	flex: 0 0 20%;
+	flex: 0 0 30%;
+	margin-right: 10px;
 }
 
 section.cart .items img {
 	width: 100%;
+}
+
+section.cart .items h4 {
+	margin: 0;
+}
+
+section.cart .total {
+	border-top: 1px solid #ccc;
+	padding-top: 10px;
+	font-size: 1.1em;
+}
+
+section.cart button {
+	margin-top: auto;
+	background: #000;
+	padding: 15px 20px;
+	color: #fff;
+	border: 0 none;
+	cursor: pointer;
 }
