--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -32,6 +32,10 @@ header.main {
 	background: #fff;
 }
 
+header.main * {
+    user-select: none;
+}
+
 header.main .container {
 	display: flex;
 	justify-content: space-between;
@@ -61,7 +65,6 @@ header.main nav a {
 	font-weight: bold;
 	text-transform: uppercase;
 	padding: 15px;
-	text-align: center;
 	width: 100%;
 }
 
@@ -96,16 +99,24 @@ header.main .menu-toggle img {
 		display: block;
 		position: fixed;
 		top: 0;
-		right: -100%;
-		width: 300px;
+		right: 0%;
+		width: 250px;
 		min-height: 100vh;
 		background: #fff;
+		transform: translate3d(250px,0,0);
 		transition: all 0.25s ease-in-out;
 		opacity: 0:;
 	}
 	body.show-menu header.main nav {
+		transform: translateZ(0);
 		right: 0;
 		opacity: 1;
+	}
+	body.show-menu header.main nav a {
+		padding: 15px 25px;
+		font-weight: normal;
+		background: #f6f6f6;
+		border-bottom: 1px solid #ccc;
 	}
 	header.main:before {
 		content: "";
