--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -193,6 +193,7 @@ header.main .menu-toggle img {
 .emotion img {
 	width: 100%;
 	height: auto;
+	display: block;
 }
 
 @media (min-width: 900px) {
@@ -203,9 +204,48 @@ header.main .menu-toggle img {
 
 .intro {
 	display: flex;
+	padding: 5px;
+}
+
+.intro .col {
+	flex: 0 0 25%;
+    max-width: 25%;
+    position: relative;
+    overflow: hidden;
+    padding: 5px;
+}
+
+.intro .col a {
+    overflow: hidden;
+    display: block;
 }
 
 .intro img {
 	width: 100%;
 	height: auto;
+	transition: all 0.25s ease-in-out;
+	display: block;
+}
+
+.intro .title {
+	position: absolute;
+	z-index: 1;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	background: #fff;
+	color: #000;
+	font-size: 1.25em;
+	font-weight: bold;
+	padding: 10px 25px;
+	transition: all 0.25s ease-in-out;
+}
+
+.intro .col:hover img {
+	transform: scale(1.2);
+}
+
+.intro .col:hover .title {
+	background: #000;
+	color: #fff;
 }
