--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -67,6 +67,11 @@ header.main nav a {
 	text-transform: uppercase;
 	padding: 15px;
 	width: 100%;
+	transition: all 0.15s ease-in-out;
+}
+
+header.main nav a:hover {
+	color: #00adf2;
 }
 
 header.main .cart {
@@ -178,9 +183,6 @@ header.main .menu-toggle img {
 		text-align: left;
 		width: auto;
 	}
-	header.main nav a:hover {
-		box-shadow: inset 0 -3px 0 0 #333;
-	}
 	header.main .cart .text {
 		display: block;
 	}
@@ -241,7 +243,7 @@ header.main .menu-toggle img {
 }
 
 .intro .col:hover .title {
-	background: #000;
+	background: #00adf2;
 	color: #fff;
 }
 
