--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -62,8 +62,10 @@ header.main nav li {
 }
 
 header.main nav a {
+	font-family: 'Roboto Condensed', sans-serif;
+	font-weight: 700;
+	font-size: 1.25em;
 	display: inline-block;
-	font-weight: bold;
 	text-transform: uppercase;
 	padding: 15px;
 	width: 100%;
@@ -161,7 +163,7 @@ header.main .menu-toggle img {
 
 @media (min-width: 900px) {
 	.logo {
-		padding: 10px;
+		padding: 10px 0;
 		margin-right: 0;
 	}
 	.logo img {
@@ -264,10 +266,12 @@ header.main .menu-toggle img {
 .brands ul {
 	display: flex;
 	justify-content: space-between;
+	flex-wrap: wrap;
 	margin: 0;
 	padding: 0;
 }
 
 .brands li {
 	list-style: none;
+	margin: 5px;
 }
